Fix en catalogo para agregado de ejempares y borrado de niveles

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -257,7 +257,7 @@
 			                [% IF portada_registro or isbn %]
 			                   <div>
 				                    [% IF portada_registro %]
-				                        <a class="fancylink" href="/uploads/covers/[% portada_registro_big %]">
+				                        <a class="fancy_link" href="/uploads/covers/[% portada_registro_big %]">
 				                            <img style="max-height: 180px; max-width:110px;" src="/uploads/covers/[% portada_registro_medium %]" title="Portada" alt="[% 'Portada del ejemplar' | i18n %]" />
 				                        </a>
 				                    [% END %]
