fix en star rating

--- a/dev-plugins/bootstrapless/opac/DEO/variables.less
+++ b/dev-plugins/bootstrapless/opac/DEO/variables.less
@@ -12,12 +12,12 @@
 // -------------------------
 @black:                 #000;
 @grayDarker:            #222;
-@grayDark:              #777;
+@grayDark:              #333;
 @gray:                  #555;
 @grayLight:             #999;
 @grayLighter:           #eee;
 @white:                 #fff;
-@verdecitoclaro:	    @white;
+@verdecitoclaro:    #D0DCE0;
 
 
 // Accent colors
@@ -34,7 +34,7 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @verdecitoclaro;
+@bodyBackground:        @white;
 @textColor:             @grayDark;
 
 
