--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -50,6 +50,13 @@ var jobID = 0;
                 $('#tweets .loading').remove();
             });
         [% END %]
+        $("#post_twitter").charCount({
+            limit: 0,        
+            warning: 10,
+            counterElement: 'p',
+            cssExceeded: 'label label-important',
+            counterText: "[% 'Caraceteres restantes' | i18n %]: ",    
+        });        
         
       });
   
@@ -74,7 +81,7 @@ var jobID = 0;
 		   <br />
 	    [% END %]
 	    <br />
-	    <a class="fancy_link btn btn-inverse" onclick="showTwitter();" > 
+	    <a class="btn btn-inverse" onclick="showTwitter();" > 
 	        <i class="icon-white icon-retweet"></i> [% 'Twitter' | i18n %]
 	    </a>
 	    
@@ -85,19 +92,19 @@ var jobID = 0;
 
 
 <div class="modal hide fade" id="show_twitter">
-              <div class="modal-header">
-                <a href="#" class="close" data-dismiss="modal">×</a>
-                <h3>[% 'Nuevo tweet' | i18n %]<h3>
-              </div>
+      <div class="modal-header">
+        <a href="#" class="close" data-dismiss="modal">×</a>
+        <h3>[% 'Nuevo tweet' | i18n %]<h3>
+      </div>
 
-              <div class="modal-body">
-                 <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge" onkeyup="enableDisableButton();" autofocus="autofocus"></textarea>
-                 <p class="help-block">[% 'Sea breve, no m&aacute;s de 140 caracteres' | i18n %].</p>
-              </div>
+      <div class="modal-body">
+         <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge" onkeyup="enableDisableButton();" autofocus="autofocus"></textarea>
+         <p class="help-block">[% 'Sea breve, no m&aacute;s de 140 caracteres' | i18n %].</p>
+      </div>
 
-              <div class="modal-footer">
-                  <button type="submit" id="publicar_twitter" class="btn btn-primary" onclick="publicar_twitter();">[% 'Tweetear' | i18n %]</button>
-              </div>
+      <div class="modal-footer">
+          <button type="submit" id="publicar_twitter" class="btn btn-primary" onclick="publicar_twitter();">[% 'Tweetear' | i18n %]</button>
+      </div>
 </div>   
 
 [% INCLUDE 'intranet-bottom.inc' %]
