--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -863,3 +863,4 @@ body{padding-bottom:60px;}
 .nano .content{padding:1px;}
 .nano .pane{background:#444;}
 #fotoUsuario{width:200px;float:right;}
+.click{cursor:pointer;}
