mensaje automatico generado para el sql.rev247

--- a/intranet/htdocs/intranet-tmpl/catalogacion/registros_grupos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/registros_grupos.tmpl
@@ -75,10 +75,10 @@
                 
 		        <div class="form-actions">
 		            [% PERL %]
-		                                print C4::AR::Filtros::to_Button(   text    => "[% 'Detalle' | i18n %]",
+		                                print C4::AR::Filtros::to_Button(   text    => "[% 'Ver detalle' | i18n %]",
 		                                                                    boton   => "btn btn-primary",
 		                                                                    onClick => "detalle();",
-		                                                                    title   => "[% 'Detalle' | i18n %]",
+		                                                                    title   => "[% 'Ver detalle' | i18n %]",
 		                                                                    inline  => 1,
 		                                        ) ;
 		            [% END %]
