--- a/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
@@ -4,21 +4,22 @@
 [% PERL %]
     print C4::AR::Filtros::tabbedPane( titulo   => "[% 'Reportes de Circulaci&oacute;n' | i18n %]",
                              subtitulo          => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
-                             content            => [ {id => 'reservas', text=> "[% 'Reservas' | i18n %]" },
-                                                     {id => 'otro', text => "[% 'Otro' | i18n %]" },
+                             content            => [  {id => 'general', text => "[% 'General' | i18n %]" },
+                                                      {id => 'reservas', text=> "[% 'Reservas' | i18n %]" },
+                                                     
                                                   ] ,
-                             active_id => 'reservas',
+                             active_id => 'general',
     
     );
 
 [% END %]
-
-        <div class="tab-pane fade in active" id="reservas">
+        <div class="tab-pane fade in active" id="general">
+            [% INCLUDE 'partials/reportes/_reporte_circulacion_general.inc' %]
+        </div>
+        <div class="tab-pane fade" id="reservas">
             [% INCLUDE 'partials/reportes/_reporte_circulacion.inc' %]
         </div>
-        <div class="tab-pane fade" id="otro">
-          <p>Otro</p>
-        </div>
+    
       </div>
 </section>
 
