--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -45,7 +45,7 @@
                                               title   => " [% 'Novedad' | i18n %]",
                                               button  => 'btn btn-primary',
                                               action  => 'showNovedad("[% novedad.id %]")',
-                                              icon    => "icon-white icon-edit",
+                                              icon    => "icon-white icon-eye-open",
                                               actions         => [
                                                                   { title   => "Editar", 
                                                                     url     => "[% url_prefix %]/admin/global/editar_novedad_intra.pl",
