--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -148,7 +148,7 @@
 													<img src="/includes/css/gbs_preview_button1.gif" border="0" style="margin: 0"/>
 												</a>
 											</div>
-											<script src="http://books.google.com/books?jscmd=viewapi&bibkeys=ISSN:[% issn %]&callback=ProcessGBSBookInfo"></script>
+											<script src="https://books.google.com/books?jscmd=viewapi&bibkeys=ISSN:[% issn %]&callback=ProcessGBSBookInfo"></script>
 										</div>
 									[% END %]
 									
@@ -180,7 +180,7 @@
                                      <img src="/includes/css/gbs_preview_button1.gif" border="0" style="margin: 0"/>
                                  </a>
                              </div>
-                             <script src="http://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:[% isbn %]&callback=ProcessGBSBookInfo"></script>
+                             <script src="https://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:[% isbn %]&callback=ProcessGBSBookInfo"></script>
                          [% END %]
 
 		                [% PERL %]
