--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/importaciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/importaciones.tmpl
@@ -9,44 +9,62 @@
  });
 </script>
 
-
      <form class="form-horizontal">
         <section class="center-section-form">
-        <fieldset>
-            <legend class="titulo_legend_resaltado">Listado de Importaciones</legend>  
-            <div class="control-group">
-                <div class="controls">
-                    <input id="nombre_importacion" type=text name="nombre_importacion" onFocus="checkFilter('focus')"
-                        onBlur="checkFilter('blur')">
-                    [% PERL %]
-                 print C4::AR::Filtros::setHelpInput(text => "[% 'Tipee el nombre, el archivo o parte del comentario de la importaci&oacute;n que desea buscar.' | i18n %]",);
-            [% END %]
-                </div>
-            </div>
-            
-            <div class="form-actions">
-                [% PERL %]
-                                    print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
-                                                                        boton   => "btn btn-primary",
-                                                                        onClick => "consultar();",
-                                                                        title   => "[% 'Buscar' | i18n %]",
-                                                                        inline => "1"
-                                            ) ;
-                [% END %]
-                [% PERL %]
-                                    print C4::AR::Filtros::to_Button(   text    => "[% 'Limpiar' | i18n %]",
-                                                                        boton   => "btn",
-                                                                        onClick => "borrar();",
-                                                                        title   => "[% 'Limpiar' | i18n %]",
-                                                                        inline => "1"
-                                            ) ;
-                [% END %]
-            
-            </div>
-    
+			<div class="right">
+			                [% PERL %]
+			                                    print C4::AR::Filtros::action_link_button(   text    => " [% 'Nueva importaci&oacute;n' | i18n %]",
+			                                                                        button   => "btn btn-success",
+			                                                                        url => "[% url_prefix %]/herramientas/importacion/subirNuevaImportacion.pl",
+                                                                                    icon => "icon-white icon-plus-sign",
+			                                                                        params => ["token=[% token%]",],
+			                                                                        title   => " [% 'Nueva importaci&oacute;n' | i18n %]",
+			                                            ) ;
+			                [% END %]
+                            [% PERL %]
+                                                print C4::AR::Filtros::action_link_button(   text    => "[% 'Esquemas' | i18n %]",
+                                                                                    button   => "btn btn-warning",
+                                                                                    url => "[% url_prefix %]/herramientas/importacion/esquemas_importacion.pl",
+                                                                                    params => ["token=[% token%]",],
+                                                                                    title   => "[% 'Esquemas' | i18n %]",
+                                                        ) ;
+                            [% END %]
+			</div>
+	        <fieldset>
+	            <legend class="titulo_legend_resaltado">Listado de Importaciones</legend>  
+	            <div class="control-group">
+	                <div class="controls">
+	                    <input id="nombre_importacion" type=text name="nombre_importacion" onFocus="checkFilter('focus')"
+	                        onBlur="checkFilter('blur')">
+	                    [% PERL %]
+	                 print C4::AR::Filtros::setHelpInput(text => "[% 'Tipee el nombre, el archivo o parte del comentario de la importaci&oacute;n que desea buscar.' | i18n %]",);
+	            [% END %]
+	                </div>
+	            </div>
+	            
+	            <div class="form-actions">
+	                [% PERL %]
+	                                    print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
+	                                                                        boton   => "btn btn-primary",
+	                                                                        onClick => "consultar();",
+	                                                                        title   => "[% 'Buscar' | i18n %]",
+	                                                                        inline => "1"
+	                                            ) ;
+	                [% END %]
+	                [% PERL %]
+	                                    print C4::AR::Filtros::to_Button(   text    => "[% 'Limpiar' | i18n %]",
+	                                                                        boton   => "btn",
+	                                                                        onClick => "borrar();",
+	                                                                        title   => "[% 'Limpiar' | i18n %]",
+	                                                                        inline => "1"
+	                                            ) ;
+	                [% END %]
+	            
+	            </div>
+        </fieldset>	    
+    </section>
 </form>
-</section>
-</fieldset>
+
 
 <fieldset>
     <legend class="titulo_legend">[% "Inicial de la importaci&oacute;n" | i18n %]</legend>
