--- a/intranet/htdocs/intranet-tmpl/circ/mostrarAdicional.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/mostrarAdicional.tmpl
@@ -12,7 +12,7 @@
             <li><strong>[% "Tel&eacute;fono: " | i18n %]</strong>[% socio.getTelefono_autorizado %]</li><br>
 
             <li><label class="checkbox"><input  type="checkbox" id="auth_selected" name="auth_selected" value="autorizado">
-                                        <span class="label label-important">Importante</span> Click para indicar si se realizan prestamos al usuario adicional
+                                        <span class="label label-important">[% 'Realizar pr&eacute;stamo a este usuario' %]</span>
                 </label>
             </li>
       </ul>
