--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaVisualizacionOpac.tmpl
@@ -85,7 +85,7 @@
                         <td>[% campo.getSubCampo %]</td>
                         <td class="pre" id="[% campo.id %]">[% campo.getPre %]</td>
                         <td class="editable" id="[% campo.id %]">[% campo.getVistaOpac %]</td>
-                        <td id="[% campo.id %]">[% campo.getPost %]</td>
+                        <td class="post" id="[% campo.id %]">[% campo.getPost %]</td>
                         <td id="[% campo.id %]">[% campo.getNivel %]</td>
                         <td >
                             [% PERL %]
