--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
@@ -2,6 +2,17 @@
 
 <script type="text/javascript">
 
+
+    function cambiarFormato(){
+        
+        if ($('#formatoImportacion').val() == 'xls'){
+                    $('#seleccionar_xls').show();
+                  }
+                 else{
+                     $('#seleccionar_xls').hide();
+        }
+    }
+
 	function uploadFile(url) {
 	    previousBytesLoaded = 0;
 	    ID2_file = 1;
@@ -40,8 +51,10 @@
 	
 	    intervalTimer = setInterval(updateTransferSpeed, 500);
 	}
-
-      $(document).ready(function() {
+      
+      $(document).ready(
+        function() {
+        $('#seleccionar_xls').hide();
         $('#nuevo_esquema').click (
             function() {
               if ($('#nuevo_esquema').attr('checked')){
@@ -92,6 +105,13 @@
                 </div>
             </div>
             
+            <div class="control-group" id="seleccionar_xls">
+                <label class="control-label" for="xls_first">[% 'La primera fila posee los encabezados?' | i18n %] </label>
+                <div class="controls">
+                    <input type="checkbox" name="xls_first" id="xls_first">
+                </div>
+            </div>
+            
             <div class="control-group">
                 <label class="control-label" for="comentario">[% 'Comentario' | i18n %]: </label>
                 <div class="controls">
@@ -99,7 +119,7 @@
                 </div>
             </div>
             
-            <div class="control-group">
+            <div class="control-group"  id="seleccionar_esquema">
                 <label class="control-label">[% 'Seleccionar Esquema' | i18n %]: </label>
                 <div class="controls">
                     [% IF combo_esquemas %][% combo_esquemas %][% ELSE %] [% 'No hay ning&uacute;n esquema definido.' %][% END %]
@@ -120,7 +140,6 @@
                     <input type="checkbox" name="nuevo_esquema" id="nuevo_esquema">
                 </div>
             </div>
-	
              
               <div class="row"></div>
               <div id="progressIndicator_1" class="progressIndicator hide" > 
@@ -149,4 +168,3 @@
 </div>
 
 [% INCLUDE 'intranet-bottom.inc' %]
-
